feature(/login): added model, repository, controller, and routes for the endpoint
