# src/routes/auth/authRoutes.ts
@@ -1,0 +1,8 @@
+import express from "express";
+import * as authController from "../../controllers/authController";
+
+const router = express.Router();
+
+router.post("/login", authController.login);
+
+export { router };
